# serializer version: 1
# name: test_run_basic
  '''
  ✓ timer set off
  ┌───┐
  │ 1 │
  ├───┤
  │ 1 │
  └───┘
  ┌───┐
  │ 2 │
  ├───┤
  │ 2 │
  └───┘
  ┌───┐
  │ 3 │
  ├───┤
  │ 3 │
  └───┘
  
  '''
# ---
# name: test_run_basic_dots
  '''
  ✓ timer set off
  ┌───┐
  │ 1 │
  ├───┤
  │ 1 │
  └───┘
  yo
  yo2
  
  '''
# ---
# name: test_run_error[stderr]
  '''
  error[1]: SQL logic error
     ┌─ a.sql:11:3
     │
  11 │   substr(),
     │   ^^^^^^ wrong number of arguments to function substr()
  
  
  '''
# ---
# name: test_run_error[stdout]
  '''
  ✓ timer set off
  ┌───────┐
  │ world │
  ├───────┤
  │ hello │
  └───────┘
  ┌────────┐
  │ result │
  ├────────┤
  │      2 │
  └────────┘
  
  '''
# ---
